<resources>
    <string name="app_name">PET Roll</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="skip">Skip</string>
    <string name="headingfirst">Market</string>
    <string name="messagefirst">"Lorem Ipsum test "</string>
    <string name="headingsecond">Community</string>
    <string name="headingthird">Services</string>
    <string name="back">Back</string>
    <string name="sigin_heading">Choose your service</string>
    <string name="sigin_message">Please Choose service you going to provide from below listing to get started.</string>
    <string name="business_name">Business Name</string>
    <string name="sigup_heading">Sign up your account</string>
    <string name="singup_message">Welcome! \n Please continue with your credentials</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email / Mobile Number</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="accept_terms">I accept the Terms and Conditions</string>
    <string name="login_heading">Let\'s Sign you in</string>
    <string name="sigin_message1">Welcome Back! \n Please continue with your credentials</string>
    <string name="continue_guest">Continue as Guest</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="forgot_password_message">Please enter your registered mobile number \n to reset your password</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_heading">OTP Verification</string>
    <string name="otp_msg">A 6 - Digit Pin has been sent to your \n Phone number. Enter it below to continue</string>
    <string name="continue_str">Continue</string>
    <string name="dashboard_heading">Who you are ?</string>
    <string name="dashboard_msg">Select your user type</string>
    <string name="service_provider">Service \n Provider</string>
    <string name="owner">Pet Owner</string>
    <string name="service">Service</string>
    <string name="market">Market</string>
    <string name="community">Community</string>
    <string name="open">open</string>
    <string name="close">Close</string>
    <string name="my_appointment">My Appointment</string>
    <string name="my_cart">My Cart</string>
    <string name="wishlist">My Wishlist</string>
    <string name="chat">Chat</string>
    <string name="my_orders">My Orders</string>
    <string name="fav">My Favourites</string>
    <string name="following">My Following</string>
    <string name="following_title">My\nFollowing</string>
    <string name="my_sold">My Sold Item</string>
    <string name="my_address">My Address</string>
    <string name="my_auction">My Auction</string>
    <string name="blocklist">Blocklist</string>
    <string name="setting">Settings</string>
    <string name="shop">Shops</string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="auction">Auction</string>
    <string name="vet">Veterinary</string>
    <string name="trainer">Trainer</string>
    <string name="peer">Peer to Peer</string>
    <string name="spa_and_body"><![CDATA[Spa & Body]]></string>
    <string name="consultant">Consultant</string>
    <string name="post">Post</string>
    <string name="mating">Matings</string>
    <string name="lost_found"><![CDATA[Lost & Found]]></string>
    <string name="adoption">Adoption</string>
    <string name="post_incident">Post Incident</string>
    <string name="find_help">Find Help</string>
    <string name="guide">Guide</string>
    <string name="news_event"><![CDATA[News \n & Event]]></string>
    <string name="news_event_top"><![CDATA[News & Event]]></string>
    <string name="notification">Notifications</string>
    <string name="profile">Profile</string>
    <string name="my_pet">My Pets</string>
    <string name="preganncy">Pregnancy</string>
    <string name="vaccine">Vaccine</string>
    <string name="feeds">Feeds</string>
    <string name="appointment">Appointments</string>
    <string name="consultation_fee">Consultation Fee</string>
    <string name="wishlist_back">Wishlist</string>
    <string name="product">Products</string>
    <string name="categories">Categories</string>
    <string name="select_address">Select\nAddress</string>
    <string name="add_new_address">Add New Address</string>
    <string name="ongoing">Ongoing</string>
    <string name="past">Past</string>
    <string name="total_bidder">Total Bidders</string>
    <string name="auction_ends">Auction Ends</string>
    <string name="current_bid">Current Bid</string>
    <string name="final_price">Final Bid</string>
    <string name="unfollow">Unfollow</string>
    <string name="unblock">Unblock</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="track_order">Track Order</string>
    <string name="follow">Follow</string>
    <string name="shops_top">Shops</string>
    <string name="buy">Buy</string>
    <string name="food">Food</string>
    <string name="accesories">Accesories</string>
    <string name="toys">Toys</string>
    <string name="clothing">Clothing</string>
    <string name="health_supply">Health Supply</string>
    <string name="grooming">Grooming</string>
    <string name="pet_walk">Pet\nWalk</string>
    <string name="pet_taxi">Pet\nTaxi</string>
    <string name="pet_boarding">Pet\nBoarding</string>
    <string name="vertinary">Veterinary</string>
    <string name="hello_pet">Hello Pet</string>
    <string name="delivery_here">Delivery Available</string>
    <string name="unfollow_text">Delivery Schedule Allowance</string>
    <string name="dog">Dog</string>
    <string name="cat">Cats</string>
    <string name="bird">Birds</string>
    <string name="rabbits">Rabbits</string>
    <string name="fish">Fish</string>
    <string name="pets">Pets</string>
    <string name="medicine">Medicine</string>
    <string name="bed">Bed</string>
    <string name="homes">Homes</string>
    <string name="view_all">View All</string>
    <string name="benefits">Benefits</string>
    <string name="rating_review">Ratings and Reviews</string>
    <string name="add_cart">Add to Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="product_detail">Product \n Detail</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="bag">Bag</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="your_cart">Your Cart</string>
    <string name="cart_details">Cart Details</string>
    <string name="checkout">Checkout</string>
    <string name="place_order">Place Order</string>
    <string name="shipping">Shipping To</string>
    <string name="add_new">+ Add New</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address_hint">Address(House No, Building, Street)</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="add_address">Add Address</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_status">Order Status</string>
    <string name="item_detail">Item Details</string>
    <string name="start_chat">Start Chat</string>
    <string name="place_your_bid">Place Your Bid</string>
    <string name="hint_email_only">Enter Email</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="bag_discount">Bag Discount</string>
    <string name="bag_total">Bag Total</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="order_total">Order Total</string>
    <string name="vat">Vat</string>
    <string name="total">Total</string>
    <string name="pay_at_visit">Pay At Visit</string>
    <string name="other">Other</string>
    <string name="add_to_quick_access">Add To Quick Access</string>
</resources>