<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/back"
            layout="@layout/layout_app_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <include
            android:id="@+id/icon_layout"
            layout="@layout/layout_icon"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/dimen5"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_weight="1" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cvTag"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_width="match_parent"
        app:singleSelection="true"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:text="@string/food"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:text="@string/accesories"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:text="@string/toys"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:text="@string/clothing"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:text="@string/health_supply"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:text="@string/grooming"
            android:layout_height="wrap_content"/>

    </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_shop"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>