<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/overlay_bg"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/screen_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen120"
            android:layout_height="@dimen/dimen80"
            android:src="@drawable/petroll_icon"
            android:layout_gravity="center"
            android:id="@+id/petroll_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dimen20"
            android:textSize="@dimen/text18"
            android:text="@string/sigup_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen10"
            android:text="@string/singup_message"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_name"
            android:textColorHint="@color/hint"
            android:paddingStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/spinner_bg"
            android:hint="@string/hint_name"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:textColorHint="@color/hint"
            android:paddingStart="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/spinner_bg"
            android:hint="@string/hint_email"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:textColorHint="@color/hint"
            android:paddingStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/spinner_bg"
            android:hint="@string/hint_password"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_confirm_password"
            android:textColorHint="@color/hint"
            android:paddingStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/spinner_bg"
            android:hint="@string/hint_confirm_password"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_next"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/black"
            android:layout_marginTop="@dimen/dimen30"
            app:cardCornerRadius="@dimen/dimen10"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginEnd="@dimen/dimen20"
            android:layout_height="@dimen/dimen60">

            <TextView
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/next"
                android:textSize="@dimen/text18"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_have_account"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/have_account"
                android:textSize="@dimen/text16"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_toEndOf="@+id/tv_have_account"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sign_in"
                android:id="@+id/tv_signin"
                android:textSize="@dimen/text16"
                android:layout_marginStart="@dimen/dimen5"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/db_accept"
        android:text="@string/accept_terms"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/dimen10"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>

</RelativeLayout>