<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/overlay_bg"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/screen_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen20"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen120"
            android:layout_height="@dimen/dimen80"
            android:layout_gravity="center"
            android:src="@drawable/petroll_icon"
            android:id="@+id/petroll_icon"
            android:layout_marginTop="@dimen/dimen20"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:text="@string/login_heading"
            android:textSize="@dimen/text18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sigin_message1"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/spinner_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_email"
            android:paddingStart="@dimen/dimen20"
            android:textColorHint="@color/hint" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/spinner_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_password"
            android:paddingStart="@dimen/dimen20"
            android:textColorHint="@color/hint" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rl_forgot_password"
            android:layout_marginEnd="@dimen/dimen10"
            android:layout_height="@dimen/dimen50">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"/>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginTop="@dimen/dimen30"
            app:cardBackgroundColor="@color/black"
            android:layout_marginEnd="@dimen/dimen20"
            android:layout_marginStart="@dimen/dimen20"
            app:cardCornerRadius="@dimen/dimen10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/text18" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_guest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginTop="@dimen/dimen20"
            app:cardBackgroundColor="@color/black"
            android:layout_marginEnd="@dimen/dimen20"
            android:layout_marginStart="@dimen/dimen20"
            app:cardCornerRadius="@dimen/dimen10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/continue_guest"
                android:textColor="@color/white"
                android:textSize="@dimen/text18" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/dont_have_account"
            android:layout_height="@dimen/dimen40"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:text="Or"
            android:layout_marginTop="@dimen/dimen5"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen50"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_gravity="center">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/dimen20"
                android:background="@drawable/social_login_circle"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dimen30"
                android:src="@drawable/google"
                android:layout_centerInParent="true"
                android:layout_height="@dimen/dimen30"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dimen20"
                android:background="@drawable/social_login_circle"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dimen30"
                android:layout_centerInParent="true"
                android:src="@drawable/fb"
                android:layout_height="@dimen/dimen30"/>

            </RelativeLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/db_accept"
            android:text="@string/accept_terms"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen30"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>

</RelativeLayout>